# petrinlang

./: LICENSE  README.md  arc.py  example.pn  improve.py  inn.py  main.py  out.py  place.py  pyproject.toml  requirements.txt
documentation/: doc.md
src/: dsllang.py  inn.py  net.py  out.py  transition.py
